+++++++++++
Python News
+++++++++++

What's New in Python 3.3.0 Beta 2?
==================================

*Release date: xx-xxx-2012*

Core and Builtins
-----------------

- Issue #15314: __main__.__loader__ is now set correctly during
  interpreter startup

- Issue #15111: When a module imported using 'from import' has an ImportError
  inside itself, don't mask that fact behind a generic ImportError for the
  module itself.

- Issue #15293: Add GC support to the AST base node type.

- Issue #15291: Fix a memory leak where AST nodes where not properly
  deallocated.

- Issue #15110: Fix the tracebacks generated by "import xxx" to not show
  the importlib stack frames.

- Issue #15020: The program name used to search for Python's path is now
  "python3" under Unix, not "python".

- Issue #15033: Fix the exit status bug when modules invoked using -m swith,
  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.
  
Library
-------

- Issue #15180: Clarify posixpath.join() error message when mixing str & bytes

- Issue #15343: pkgutil now includes an iter_importer_modules implementation
  for importlib.machinery.FileFinder (similar to the way it already handled
  zipimport.zipimporter)

- Issue #15314: runpy now sets __main__.__loader__ correctly

- Issue #15357: The import emulation in pkgutil is now deprecated. pkgutil
  uses importlib internally rather than the emulation

- Issue #15233: Python now guarantees that callables registered with
  the atexit module will be called in a deterministic order.

- Issue #15238: shutil.copystat now copies Linux "extended attributes".

- Issue #15230: runpy.run_path now correctly sets __package__ as described
  in the documentation

- Issue #15315: Support VS 2010 in distutils cygwincompiler.
